--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@ I specialize in backend development and API integrations, with additional expert
               <div class="portfolio-info">
                 <h4>Service Record Management System- SRMS</h4>
                 <p>A multilingual software for storing information of employees of the Forest Department.</p>
-                <a href="assets/img/portfolio/srms-1.png" title="SRMS" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="assets/img/portfolio/srms-1.jpeg" title="SRMS" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="srms.html" title="Service Record Management System- SRMS" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
